--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,14 +21,18 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  http: ^0.13.3
+  provider: ^5.0.0
   flutter:
     sdk: flutter
-  card_swiper : ^2.0.1
+  flutter_card_swipper: ^0.4.0
 
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  
 
 dev_dependencies:
   flutter_test:
